test: 부족한 테스트 케이스 추가 구현